--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,4 +25,16 @@ jobs:
       run: npm run test:unit
     - name: Display Softuni username
       run: echo 'fightera'
-    
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-unit-tests
+    steps:
+    - name: Checkout the repository 
+      uses: actions/checkout@v3
+    - name: Deploy to Render
+      uses: JorgeLNJunior/render-deploy@v1.4.4
+      with:
+        service_id: ${{ secrets.SERVICE_KEY }}
+        api_key: ${{secrets.RENDER_API_KEY}}
+        wait-deploy: true
