Update action for UI tests

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,9 +26,30 @@ jobs:
     - name: Display Softuni username
       run: echo 'fightera'
 
+  execute-ui-tests:
+    needs: build-and-unit-tests
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Clone github repo on the machine
+      uses: actions/checkout@v4
+    - name: Use Node.js 20
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
+        cache: 'npm'
+    - name: Install project dependencies
+      run: npm i
+    - name: Install Playwright Browsers
+      run: npx playwright install
+    - name: Start the app
+      run: npm start &
+    - name: Run ui tests
+      run: npm run test:ui
+
   deploy:
     runs-on: ubuntu-latest
-    needs: build-and-unit-tests
+    needs: execute-ui-tests
     steps:
     - name: Checkout the repository 
       uses: actions/checkout@v3
